# huffman-compression

./: .check_dependencies.sh  .gitignore  CMakeLists.txt  Makefile  README.md  README.org  build.sh  main2
.docs/: report.org
.textfiles/: lord_of_the_sea.txt  pantagruel.txt  poem.txt
docs/.auctex-auto/: report.el
graphics/src/: main.cpp
src/.graphics/: LA GRAPH.pro  Makefile  main.cpp
src/.graphics/HEADERS/: MainMenu.hpp  MainWindow.hpp
src/.graphics/src/: MainWindow.cpp
src/graphics/: moc_MainWindow.cpp
src/graphics/HEADERS/: Affichage.hpp
src/graphics/src/: CMakeLists.txt  MainMenu.cpp
src/headers/: AppMenu.hpp  AppWindow.hpp  ArbreB.hpp  Part1.hpp  Part2.hpp  Part3.hpp  Sommet.hpp
src/lib/: AppMenu.cpp  AppWindow.cpp  ArbreB.cpp  ArbreB.hpp  Menu.hpp  Part1.cpp  Part2.cpp  Part3.cpp  PartTwo.cpp  PartTwo.hpp  Sommet.cpp  Sommet.hpp  Window.hpp
src/test/: PartOneTests.cpp  PartOneTests.hpp
